--- a/non.ipynb
+++ b/non.ipynb
@@ -2,62 +2,108 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "466e7ce5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\axjui\\AppData\\Local\\Temp\\ipykernel_7232\\1618610859.py:3: DtypeWarning: Columns (13,14,15,16,17) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df=pd.read_csv(\"2017_FPA_FOD_cons.csv\")\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "df=pd.read_csv(\"2017_FPA_FOD_cons.csv\")\n",
-    "from cleaning import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "856e3960",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pipeline de Nettoyage - Démarrage. Dimensions : (82279, 308)\n",
+      "--- 1. CHARGEMENT ET NETTOYAGE (TOUTES COLONNES) ---\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\axjui\\Dropbox\\Ecole_Axel\\ESILV\\année 4\\green ai\\green_ai\\without_one_hot_encoding.py:22: DtypeWarning: Columns (14,17) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(filename)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pipeline de Nettoyage - Démarrage. Dimensions : (73221, 308)\n",
       "======================================================================\n",
-      "Colonnes avec plus de 50.0% de NaN à supprimer : 21\n",
-      "Colonnes constantes à supprimer : 14\n",
-      "Total de colonnes supprimées (Step 1) : 29\n",
+      "Colonnes avec plus de 50.0% de NaN à supprimer : 23\n",
+      "Colonnes constantes à supprimer : 8\n",
+      "Total de colonnes supprimées (Step 1) : 24\n",
       "--- DÉBUT DU NETTOYAGE DÉTAILLÉ (handle_aberrant_values) ---\n",
-      "   -> 223 colonnes float vérifiées.\n",
-      "   -> 97 valeurs techniques (-1e30) remplacées par NaN.\n",
-      "   -> 2624 codes d'erreur (< -900) remplacés par NaN.\n",
-      "   -> 1623 erreurs topo (32767) remplacées par NaN.\n",
-      "Total des cellules corrigées : 4344\n",
+      "   -> 225 colonnes float vérifiées.\n",
+      "   -> 92 valeurs techniques (-1e30) remplacées par NaN.\n",
+      "   -> 3409 codes d'erreur (< -900) remplacés par NaN.\n",
+      "   -> 1474 erreurs topo (32767) remplacées par NaN.\n",
+      "Total des cellules corrigées : 4975\n",
       "-> Features temporelles (Mois, Jour) extraites.\n",
       "-> Conversion des colonnes 'faux-textes' en numériques...\n",
       "-> Colonnes catégorielles supprimées (Manuelles) : 15\n",
       "-> Imputation des NaN catégoriels par 'Missing' sur 22 colonnes.\n",
-      "Dimensions avant traitement des NaN : (82279, 266)\n",
+      "Dimensions avant traitement des NaN : (73221, 271)\n",
       "   -> 'DISCOVERY_TIME' transformée en 'Discovery_Time_Hours'.\n",
-      "-> Colonnes supprimées (Leakage/IDs) : 5\n",
+      "-> Colonnes supprimées (Leakage/IDs) : 4\n",
       "-> Remplissage des valeurs manquantes (Médiane)...\n",
       "   ALERTE : 10 colonnes sont entièrement vides (ex: ['EVH_1km', 'EVT_1km', 'EVC_1km']).\n",
       "   -> Suppression de ces colonnes vides avant imputation pour éviter le crash.\n",
       "-> NaN restants dans les colonnes numériques : 0\n",
-      "-> Encodage One-Hot de 19 variables (ex: Cause, State, Ecoregion)...\n",
-      "Dimensions APRÈS encodage : (82279, 630)\n",
+      "-> Création des features avancées (Physique & Clustering)...\n",
+      "   -> Interactions physiques ajoutées (Wind_x_Dryness, etc.)\n",
+      "   -> Clustering Spatial terminé (50 régions créées).\n",
+      "-> Encodage One-Hot de 20 variables (ex: Cause, State, Ecoregion)...\n",
+      "Dimensions APRÈS encodage : (73221, 696)\n",
       "======================================================================\n",
-      "Pipeline terminé. Dimensions finales : (82279, 630)\n"
+      "Pipeline terminé. Dimensions finales : (73221, 696)\n",
+      "-> Nombre total de features : 694\n",
+      "-> Dont features catégorielles détectées : 0\n",
+      "\n",
+      "--- 2. ENTRAÎNEMENT CATBOOST (FULL FEATURES) CORRIGÉ ---\n",
+      "Distribution Train : {0: 6632, 1: 3316, 2: 1658}\n",
+      "0:\tlearn: 1.0705385\ttotal: 45.4ms\tremaining: 45.3s\n",
+      "100:\tlearn: 0.6908409\ttotal: 4.2s\tremaining: 37.3s\n",
+      "200:\tlearn: 0.6422412\ttotal: 8.98s\tremaining: 35.7s\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m#df=pd.read_csv(\"2020_FPA_FOD_cons.csv\")\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mwithout_one_hot_encoding\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n",
+      "File \u001b[1;32mc:\\Users\\axjui\\Dropbox\\Ecole_Axel\\ESILV\\année 4\\green ai\\green_ai\\without_one_hot_encoding.py:96\u001b[0m\n\u001b[0;32m     84\u001b[0m \u001b[38;5;66;03m# Configuration CatBoost\u001b[39;00m\n\u001b[0;32m     85\u001b[0m model \u001b[38;5;241m=\u001b[39m CatBoostClassifier(\n\u001b[0;32m     86\u001b[0m     iterations\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1000\u001b[39m, \n\u001b[0;32m     87\u001b[0m     learning_rate\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.05\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     93\u001b[0m     allow_writing_files\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m     94\u001b[0m )\n\u001b[1;32m---> 96\u001b[0m model\u001b[38;5;241m.\u001b[39mfit(X_train, y_train)\n\u001b[0;32m     97\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m-> Modèle entraîné (Résultats désormais fiables).\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     99\u001b[0m \u001b[38;5;66;03m# ==============================================================================\u001b[39;00m\n\u001b[0;32m    100\u001b[0m \u001b[38;5;66;03m# 3. RÉSULTATS & IMPORTANCE DES FEATURES\u001b[39;00m\n\u001b[0;32m    101\u001b[0m \u001b[38;5;66;03m# ==============================================================================\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\axjui\\anaconda3\\Lib\\site-packages\\catboost\\core.py:5245\u001b[0m, in \u001b[0;36mCatBoostClassifier.fit\u001b[1;34m(self, X, y, cat_features, text_features, embedding_features, graph, sample_weight, baseline, use_best_model, eval_set, verbose, logging_level, plot, plot_file, column_description, verbose_eval, metric_period, silent, early_stopping_rounds, save_snapshot, snapshot_file, snapshot_interval, init_model, callbacks, log_cout, log_cerr)\u001b[0m\n\u001b[0;32m   5242\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mloss_function\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m params:\n\u001b[0;32m   5243\u001b[0m     CatBoostClassifier\u001b[38;5;241m.\u001b[39m_check_is_compatible_loss(params[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mloss_function\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m-> 5245\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_fit(X, y, cat_features, text_features, embedding_features, \u001b[38;5;28;01mNone\u001b[39;00m, graph, sample_weight, \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;28;01mNone\u001b[39;00m, baseline, use_best_model,\n\u001b[0;32m   5246\u001b[0m           eval_set, verbose, logging_level, plot, plot_file, column_description, verbose_eval, metric_period,\n\u001b[0;32m   5247\u001b[0m           silent, early_stopping_rounds, save_snapshot, snapshot_file, snapshot_interval, init_model, callbacks, log_cout, log_cerr)\n\u001b[0;32m   5248\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\n",
+      "File \u001b[1;32mc:\\Users\\axjui\\anaconda3\\Lib\\site-packages\\catboost\\core.py:2410\u001b[0m, in \u001b[0;36mCatBoost._fit\u001b[1;34m(self, X, y, cat_features, text_features, embedding_features, pairs, graph, sample_weight, group_id, group_weight, subgroup_id, pairs_weight, baseline, use_best_model, eval_set, verbose, logging_level, plot, plot_file, column_description, verbose_eval, metric_period, silent, early_stopping_rounds, save_snapshot, snapshot_file, snapshot_interval, init_model, callbacks, log_cout, log_cerr)\u001b[0m\n\u001b[0;32m   2407\u001b[0m allow_clear_pool \u001b[38;5;241m=\u001b[39m train_params[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mallow_clear_pool\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m   2409\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m plot_wrapper(plot, plot_file, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTraining plots\u001b[39m\u001b[38;5;124m'\u001b[39m, [_get_train_dir(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_params())]):\n\u001b[1;32m-> 2410\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_train(\n\u001b[0;32m   2411\u001b[0m         train_pool,\n\u001b[0;32m   2412\u001b[0m         train_params[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124meval_sets\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[0;32m   2413\u001b[0m         params,\n\u001b[0;32m   2414\u001b[0m         allow_clear_pool,\n\u001b[0;32m   2415\u001b[0m         train_params[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minit_model\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m   2416\u001b[0m     )\n\u001b[0;32m   2418\u001b[0m \u001b[38;5;66;03m# Have property feature_importance possibly set\u001b[39;00m\n\u001b[0;32m   2419\u001b[0m loss \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_object\u001b[38;5;241m.\u001b[39m_get_loss_function_name()\n",
+      "File \u001b[1;32mc:\\Users\\axjui\\anaconda3\\Lib\\site-packages\\catboost\\core.py:1790\u001b[0m, in \u001b[0;36m_CatBoostBase._train\u001b[1;34m(self, train_pool, test_pool, params, allow_clear_pool, init_model)\u001b[0m\n\u001b[0;32m   1789\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_train\u001b[39m(\u001b[38;5;28mself\u001b[39m, train_pool, test_pool, params, allow_clear_pool, init_model):\n\u001b[1;32m-> 1790\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_object\u001b[38;5;241m.\u001b[39m_train(train_pool, test_pool, params, allow_clear_pool, init_model\u001b[38;5;241m.\u001b[39m_object \u001b[38;5;28;01mif\u001b[39;00m init_model \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[0;32m   1791\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_set_trained_model_attributes()\n",
+      "File \u001b[1;32m_catboost.pyx:5023\u001b[0m, in \u001b[0;36m_catboost._CatBoost._train\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32m_catboost.pyx:5072\u001b[0m, in \u001b[0;36m_catboost._CatBoost._train\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df=pd.read_csv(\"2020_FPA_FOD_cons.csv\")\n",
+    "from without_one_hot_encoding import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "856e3960",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'full_data_cleaning_pipeline' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df_final\u001b[38;5;241m=\u001b[39mfull_data_cleaning_pipeline(df)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'full_data_cleaning_pipeline' is not defined"
      ]
     }
    ],
